[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Levels/Level1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/SettingsScreen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
level_scene = ExtResource( 4 )
settings_scene = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = 6.0
margin_right = 56.0
margin_bottom = 50.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 110.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"

[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_Start_button_down"]
[connection signal="button_up" from="VBoxContainer/Start" to="." method="_on_Start_button_up"]
[connection signal="button_down" from="VBoxContainer/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_up" from="VBoxContainer/Settings" to="." method="_on_Settings_button_up"]
